Update PSX Web Scraper Project

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/CosmicEmm/Game-Dev" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Data Cleaning in SQL</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/CosmicEmm/PSX-Web-Scraper" class="image"><img src="images/PSX.png" alt="" /></a>
+											<h3>PSX Web Scraper & Data Logger</h3>
+											<p>A Python-based web scraping project that automatically extracts real-time KSE-100 index data from the Pakistan Stock Exchange (PSX) and logs it into a structured CSV dataset for analysis. This project demonstrates data collection, automation, and analysis workflows from web scraping to data storage and visualization-ready output using Python’s data ecosystem.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/CosmicEmm/Game-Dev" class="button">View Project</a></li>
+												<li><a href="https://github.com/CosmicEmm/PSX-Web-Scraper" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
