Added 2nd project

--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
 										<article>
 											<a href="https://github.com/CosmicEmm/PSX-Web-Scraper" class="image"><img src="images/PSX.png" alt="" /></a>
 											<h3>PSX Web Scraper & Data Logger</h3>
-											<p>A Python-based web scraping project that automatically extracts real-time KSE-100 index data from the Pakistan Stock Exchange (PSX) and logs it into a structured CSV dataset for analysis. This project demonstrates data collection, automation, and analysis workflows from web scraping to data storage and visualization-ready output using Python’s data ecosystem.</p>
+											<p>A Python-based web scraping project that automatically collects real-time KSE-100 index data from the Pakistan Stock Exchange (PSX) and stores it in a structured CSV file. It showcases analysis workflows from web scraping to data storage and visualization-ready output using Python’s data ecosystem.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/CosmicEmm/PSX-Web-Scraper" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="https://github.com/CosmicEmm/COVID-19-Data-Analysis.git" class="image"><img src="images/COVID-19.png" alt="" /></a>
+											<h3>COVID-19 Data Analysis in MySQL</h3>
+											<p>This project showcases data cleaning, transformation, and analytical querying of global COVID-19 datasets using MySQL. It applies advanced SQL techniques such as window functions, CTEs, temporary tables, subqueries, joins, and views to perform complex analytical queries and extract insights.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://github.com/CosmicEmm/COVID-19-Data-Analysis.git" class="button">View Project</a></li>
 											</ul>
 										</article>
 										<article>
